add changes files to resolve bug

--- a/app/admin/dashboard/dashboard.module.css
+++ b/app/admin/dashboard/dashboard.module.css
@@ -1,6 +1,5 @@
 .firstCard{
-    flex-grow: 1;
-    flex-basis: 200;
+   
     background-color: #faedcb !important;
     color:#e8af09 !important ;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -10,8 +9,7 @@
 
 }
 .secondCard{
-    flex-grow: 1;
-    flex-basis: 200;
+   
     background-color:  #c6def1 !important;
     color: #0aa0ed !important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -21,8 +19,7 @@
 }
 
 .thirdCard{
-    flex-grow: 1;
-    flex-basis: 200;
+    
     background-color:  #dbcdf0 !important;
     color:#7526ec !important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -30,4 +27,33 @@
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     
+}
+
+.fourthCard{
+  
+    background-color:  #C9E4DE !important;
+    color:#158f74 !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 1rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+    
+}
+
+.fifthCard{
+    background-color:  #F2C6DE !important;
+    color:#c44c8d !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 1rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+}
+
+.sixthCard{
+    background-color:  #F7D9C4 !important;
+    color:#c56019 !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 1rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
 }
